--- a/views/default/board.html
+++ b/views/default/board.html
@@ -154,7 +154,7 @@
                 <td>
                     <button class="btn btn-nostyle create_task" alt='{{=T("Add Task")}}' title='{{=T("Add Task")}}'>
                         {{=T("Add Task")}}
-                        <i class="icon-circle-arrow-right"></i>
+                        <i class="icon-plus-sign"></i>
                     </button>
                     <p class="definition_ready_title">{{=definition_ready[story.id][count].title}}</p>
                 </td>
