--- a/views/default/statistics.html
+++ b/views/default/statistics.html
@@ -43,13 +43,12 @@
         <div class="clearfix"></div>
     </div>
 </div>
-
-<div class="container-fluid">
+<div id="all_content" class="row-fluid">
     <div class="row-fluid">
         <div class="span12">
             <div id="container" style="min-width: 350px; height: 350px; margin: 0 auto"></div>
         </div>
     </div><!--/row-->
+    <br>
 </div><!--/container-fluid-->
-<br>
 
