--- a/static/css/base.css
+++ b/static/css/base.css
@@ -132,13 +132,22 @@ float: left;
 	position: relative;
 	top: 12px;
 	left: 0px;
-	padding: 0px 18px;
+	/*padding: 0px 18px;*/
     text-decoration: none;
 }
 
 #projects li a:hover {
-	/*text-shadow: 2px 2px 2px #ccc;*/
-	color: #00A0B1;
+    color: #00A0B1;
+}
+
+#all_projects_link {
+    font-size: 40px!important;
+    font-weight: bold;
+    top: 0px!important;
+}
+
+#all_projects {
+    width: 800px;
 }
 
 .color-logo{
