--- a/views/default/header.html
+++ b/views/default/header.html
@@ -42,6 +42,33 @@
                 {{p_count += 1}}
                 {{pass}}
             {{pass}}
+<!--             <li class="dropdown">
+                <a href="#" id="all_projects_link" class="dropdown-toggle" data-toggle="dropdown" alt='{{=T("All Projects")}}' title='{{=T("All Projects")}}'>...</a>
+
+                <div id="all_projects" class="dropdown-menu" style="padding: 15px; padding-bottom: 0px;">
+
+                    {{if all_projects["person_projects"]:}}
+                        <h3>{{=T('My Projects')}} <span class="label">{{=len(all_projects["person_projects"])}}</span></a></h3>
+                        <ul>
+                        {{for i in all_projects["person_projects"]:}}
+                            <li>
+                                <a href='{{=URL(c="default",f="product_backlog",args=[i.id])}}'>{{=i.name}}</a>
+                                <button data-project="{{=i.id}}" class="delete_project btn btn-danger btn-mini">{{=T("delete")}}</button>
+                            </li>
+                        {{pass}}
+                        </ul>
+                    {{pass}}
+                    {{if all_projects["shared_with_person"]:}}
+                        <h3>{{=T('Projects that I am part')}} <span class="label">{{=len(all_projects["shared_with_person"])}}</span></a></h3>
+                        <ul>
+                        {{for i in all_projects["shared_with_person"]:}}
+                            <li><a href='{{=URL(c="default",f="product_backlog",args=[i.project_id])}}'>{{=i.project_id.name}}</a></li>
+                        {{pass}}
+                        </ul>
+                    {{pass}}
+
+                </div>
+            </li> -->
         </ul>
         <div id="user-nav" class="navbar navbar-inverse">
             <ul class="nav">
