--- a/views/default/layout_base.html
+++ b/views/default/layout_base.html
@@ -130,16 +130,17 @@
                 <script src='{{=URL("static","js/jquery-2.0.0.min.js")}}'></script>
             <!--[endif]-->
 
-            <script src="{{=URL('static','js/jquery-ui-1.10.2.custom.min.js')}}"></script>
-            <script src='{{=URL("static","js/bootstrap.min.js")}}'></script>
             <script src='{{=URL("static","js/web2py.js")}}'></script>
+            <script src="{{=URL('static','js/jquery-ui-1.10.3.custom.min.js')}}"></script>
+            <script src='{{=URL("static","js/bootstrap.min.js")}}'></script>
             <script async defer src='{{=URL("static","js/base.js")}}'></script>
             {{ if not request.function == "projects": }}
             <script src='{{=URL("static","js/bootstrap-editable.min.js")}}'></script>
             <script async defer src="{{=URL('static','js/jquery.ui.touch-punch.min.js')}}"></script>
             <script async defer src="{{=URL('static','js/bootstrap-datepicker.js')}}"></script>
-            <script async defer src='{{=URL("static","js/date.format.js")}}'></script>
+            <script src='{{=URL("static","js/date.format.js")}}'></script>
             {{ pass }}
+
             {{ if request.function == "product_backlog": }}
             <script async defer src='{{=URL("static","js/product_backlog.js")}}'></script>
             {{ elif request.function == "board": }}
@@ -151,13 +152,34 @@
             <script src='{{=URL("static","js/jquery.livesearch.js")}}'></script>
             <script src='{{=URL("static","js/board-livesearch.js")}}'></script>
             <script src='{{=URL("static","js/floatfixed.js")}}'></script>
-            <script>
-                  jQuery(document).ready(function(){
-                    var data;
-                    web2py_websocket('ws:127.0.0.1:8888/realtime/mygroup', function(e){data=eval(e.data)});
-                  });
-            </script>
 
+            <script>
+              jQuery(document).ready(function(){
+                web2py_websocket('ws://127.0.0.1:8888/realtime/mygroup', function(e){
+
+                    var obj = JSON.parse(e.data),
+                        story = $('.item_container[data-definitionready="' + obj.definition_ready_id +'"]');
+
+                    // console.log(obj);
+                    if(obj.move === true) {
+                        var status = ["todo", "inprogress", "verification", "done"];
+
+                        for(i in status) {
+                            query = "definition_ready_id=" + obj.definition_ready_id + "&status=" + status[i];
+                            story.find("." + status[i]).load("http://{{=request.env.http_host}}/{{=request.application}}/{{=request.controller}}" + "/load_tasks/?" + query);
+                        }
+
+                    } else {
+                        query = "definition_ready_id=" + obj.definition_ready_id + "&status=" + obj.status;
+                        story.find("." + obj.status).load("http://{{=request.env.http_host}}/{{=request.application}}/{{=request.controller}}" + "/load_tasks/?" + query);
+                    }
+
+                    makeSortable();
+                });
+
+              });
+
+            </script>
             {{ elif request.function == "projects": }}
             <script async defer src='{{=URL("static","js/delete_project.js")}}'></script>
 
