fixed bug when adding new members on the team

--- a/views/default/board.html
+++ b/views/default/board.html
@@ -31,7 +31,7 @@
         team_page : '{{=T("Team Page")}}',
         started_in : '{{=T("Started in")}}',
         activities : '{{=T("Activities")}}',
-        attachments : '{{=T("Attachments")}}',
+        upload : '{{=T("Upload")}}',
         labels : '{{=T("Labels")}}',
         delete_card : '{{=T("Delete")}}',
         type_message : '{{=T("Type your message")}}',
