--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,7 +1,3 @@
-/**
- * Unicorn Admin Template
- * Diablo9983 -> diablo9983@gmail.com
-**/
 * {
 	outline:none !important;
 	-moz-outline: none !important;
@@ -15,6 +11,16 @@ a:hover {
 	text-decoration: none;
 }
 
+@font-face {
+    font-family: 'Playball';
+    src: url('../fonts/playball.eot?#iefix');
+    src: url('../fonts/playball.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/playball.woff') format('woff'),
+         url('../fonts/playball.ttf')  format('truetype'),
+         url('../fonts/playball.svg#playball') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
 
 /* Header */
 #header {
