--- a/views/default/board.html
+++ b/views/default/board.html
@@ -5,7 +5,7 @@
     var url = {
         create_or_update_itens : '{{=URL("create_or_update_itens.json")}}',
         move_tasks : '{{=URL("move_tasks")}}',
-        removeTask : '{{=URL("remove_itens")}}',
+        removeTask : '{{=URL("remove_board_task")}}',
         edit_owner_task : '{{=URL("_edit_owner_task")}}',
         team_page : '{{=URL(f="team",args=[request.args(0)])}}',
         team_project : '{{=URL(r=request,f="call",args=["json","_team_project"], vars={"project_id": request.args(0)})}}',
@@ -45,6 +45,7 @@
     },
     info = {
         project_id : '{{=project.id}}',
+        page : '{{=request.function}}',
         person_id : '{{=person_id}}',
     },
     date = {
