--- a/views/default/index.html
+++ b/views/default/index.html
@@ -147,6 +147,26 @@ $(document).ready(function()
         });
   });
 </script>
+
+<!-- UserVoice JavaScript SDK (only needed once on a page) -->
+<script>(function(){var uv=document.createElement('script');uv.type='text/javascript';uv.async=true;uv.src='//widget.uservoice.com/Bi2xqa4NNvPpiavFveZsdA.js';var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(uv,s)})()</script>
+
+<!-- A tab to launch the Classic Widget -->
+<script>
+UserVoice = window.UserVoice || [];
+UserVoice.push(['showTab', 'classic_widget', {
+  mode: 'full',
+  primary_color: '#cc6d00',
+  link_color: '#007dbf',
+  default_mode: 'support',
+  forum_id: 207481,
+  tab_label: 'Feedback',
+  tab_color: '#292929',
+  tab_position: 'bottom-right',
+  tab_inverted: false
+}]);
+</script>
+
 </body>
 </html>
 
